<resources>
    <string name="app_name">AgroMwinda</string>
    <string name="lbl_chefferie">Chefferie</string>
    <string name="lbl_ville">Ville</string>
    <string name="lbl_province">Province</string>
    <string name="lbl_commune">Commune</string>
    <string name="lbl_secteur">Secteur</string>
    <string name="message_dialog_title" />
    <string name="onSuccessMessage" />
    <string name="lbl_fermer">Fermer</string>
    <string name="waitForProcess">Opération encours...</string>
    <string name="lbl_organisation_paysanne">Nom de l\'OP</string>
    <string name="lbl_cooperative">Nom de la cooperative affiliée</string>
    <string name="lbl_detail">(Remplissez seulement la case concernant les données de l\'abonné)</string>
    <string name="copyrith">\©2020 AgroMwinda. Tous droits réservés</string>

    <string name="ajou">AJOUTER ABONNEE</string>
    <string name="lis">LISTE DES ABONNEES</string>

    <string name="histagro">
    «Nous sommes une plate-forme sociale, éducative et économique intelligente qui soutient
        les petits agriculteurs, les micro-entreprises et les transporteurs avec des solutions
        innovantes qui rendent l\'agrobusiness rentable et l\'accès à l\'information et aux services
        financiers plus facile pour les petites entreprises locales. Nous sommes une plateforme sociale,
        éducationnelle et économique qui soutient les petits fermiers, les micro entrepreneurs et
        les transporteurs avec des solutions innovantes qui recherchent l\'agrobusiness rentable et
        l\'accès à l\'information et aux services finaciers faciles pour les petites entreprises locales. "</string>



    <array name="list_typeAct">
        <item>--Activité--</item>
        <item>Commerce</item>
        <item>Agriculture</item>
        <item>Transport</item>
    </array>

    <array name="list_ANAct">
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
    </array>


    <array name="physiquea">
        <item>--Physique Activity--</item>
        <item>Urbain</item>
        <item>Rural</item>
        <item>meme Adresse physique </item>

    </array>
    <array name="list_typesAC">
        <item>Ferme</item>
        <item>Champ</item>
        <item>Elevage gros bétail</item>
        <item>Elevage petit bétail et Bassecours</item>
        <item>Pisciculture</item>
        <item>Apiculture</item>
        <item>PLusieurs</item>
    </array>

    <array name="objet_Act">
        <item>consommation vivrière</item>
        <item>commercialisation</item>
        <item>consommation et commercialisation</item>
    </array>

    <array name="source_Act">
        <item>Local</item>
        <item>Etrangere</item>
        <item>Nationale</item>
    </array>

    <array name="etendue">
        <item>Moins dun Hectare</item>
        <item>1 à 5 Hectares</item>
        <item>5 à 10 Hectares</item>
        <item>10 à 50 Hectares</item>
        <item>50 à 100 Hectares</item>
        <item>Plus de 100 Hectares</item>
    </array>


    <array name="list_sexe">
        <item>---</item>
        <item>Homme</item>
        <item>Femme</item>
    </array>


    <array name="comer_type_de_vente">
        <item>Denrées Alimentaire</item>
        <item>Produits Pharmaceutiques</item>
        <item>Produits de Télecominication</item>
        <item>Services</item>
        <item>Divers</item>
    </array>

    <array name="comer_source_apro">
        <item>Local</item>
        <item>Etranger</item>
        <item>Nationale</item>
    </array>

    <array name="comer_capacit">
        <item>50 000 à 100 000fc</item>
        <item>100 000 à 200 000fc</item>
        <item>200 000 à 500 000fc</item>
        <item>500 000 à 1 000 000 fc</item>
        <item>plus de 1 000 000fc</item>
    </array>

    <array name="tran_type_ve">
        <item>---</item>
        <item>voiture</item>
    </array>

    <array name="tran_marque_ve">
        <item>---</item>
        <item>jeep</item>
    </array>
    <array name="tran_annee">
        <item>---</item>
        <item>2000</item>
    </array>

    <array name="tran_capacit_ve">
        <item>---</item>
        <item>5 tonnes</item>
    </array>

    <string name="title_home">Platforme</string>
    <string name="title_dashboard">Marché</string>
    <string name="title_notifications">Credit</string>
    <string name="nav_chat">AgroSeach</string>
    <string name="action_search_text">Search</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email ou numero</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"synchronisation effectué !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ajouter_activit">Ajouter Activité</string>
</resources>
