<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/nav_platforme"
        android:icon="@drawable/ic_language"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_4"
        android:icon="@drawable/essay"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/nav_3"
        android:icon="@drawable/ic_navigation"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/nav_2"
        android:icon="@drawable/ic_language"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/nav_1"
        android:icon="@drawable/ic_navigation"
        android:title="@string/title_notifications" />

</menu>