<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.activity.AccueilApp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="199dp"
        android:layout_height="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoagromwinda" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="-16dp">


        <android.support.v7.widget.CardView
            android:layout_width="422dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorWrite"
            app:cardCornerRadius="10dp">

            <Button
                android:id="@+id/btajout"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorWrite"
                android:text="@string/ajou" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="424dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorWrite"
            app:cardCornerRadius="10dp">

            <Button
                android:id="@+id/btnList"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:background="@color/colorWrite"
                android:text="@string/lis" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="135dp"
        android:layout_height="53dp"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnplat"
            android:layout_width="117dp"
            android:layout_height="60dp"
            android:background="@color/colorWrite"
            android:text="@string/plat"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="246dp" />
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnajoutac"
            android:layout_width="118dp"
            android:layout_height="60dp"
            android:background="@color/colorWrite"
            android:text="AJOUT ACTIVITE"
            tools:layout_editor_absoluteX="277dp"
            tools:layout_editor_absoluteY="239dp" />
    </ScrollView>

    <TextView
        android:layout_width="405dp"
        android:layout_height="29dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/copyrith"
        android:textColor="@color/colorWrite"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>