<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_person_urbain"
    android:visibility="gone"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Adresse physique"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="Quartier"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txQuartier"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/btn_control_forme"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="Avenue"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txAvenue"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/btn_control_forme"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="Domicile"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txDomicile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/btn_control_forme"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Province"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/spProvince"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/btn_control_forme"
                android:drawableRight="@drawable/ic_spinner"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/lbl_province" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Ville / territoire"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/spVille"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/btn_control_forme"
                android:drawableRight="@drawable/ic_spinner"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/lbl_ville" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Commune / Chefferie / Secteur"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/spCommune"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/btn_control_forme"
                android:drawableRight="@drawable/ic_spinner"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/lbl_commune" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>