<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pan_urbain"
    android:visibility="visible"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nom de l'Activité :"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Adresse physique de l'activité "
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Province"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/spProvince"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/btn_control_forme"
                    android:drawableRight="@drawable/ic_spinner"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/lbl_province" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Ville"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/spVille"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/btn_control_forme"
                    android:drawableRight="@drawable/ic_spinner"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/lbl_ville" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Commune"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/spCommune"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/btn_control_forme"
                    android:drawableRight="@drawable/ic_spinner"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/lbl_commune" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Quartier"
                    android:textColor="#000"
                    android:textSize="14sp" />
                <EditText
                    android:id="@+id/txQuartier"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="7dp"
                    android:background="@drawable/btn_control_forme"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="Avenue"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/avenue"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="7dp"
                    android:background="@drawable/btn_control_forme"
                    android:inputType="text"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="Domicile"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/domicile"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="7dp"
                    android:background="@drawable/btn_control_forme"
                    android:inputType="text"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingRight="30dp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="20dp">

            <android.support.v7.widget.CardView
                android:layout_width="160dp"
                android:layout_height="30sp"
                android:layout_marginLeft="100sp"
                android:layout_marginTop="10dp"
                android:background="@color/colorWrite"
                app:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWrite"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="Terminer" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="160dp"
                android:layout_height="30sp"
                android:layout_marginLeft="100sp"
                android:layout_marginTop="10dp"
                android:background="@color/colorWrite"
                app:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/btnRet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWrite"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="Rectour à l'Activité" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="15sp"
            android:background="@color/colorPrimary"
            android:text="@string/copyrith"
            android:gravity="center"
            android:textColor="#000"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>