<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Identité"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="Nom"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/txNom"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="7dp"
                    android:background="@drawable/btn_control_forme"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Postnom"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/txPostnom"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="7dp"
                    android:background="@drawable/btn_control_forme"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Prénom"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/txPrenom"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="7dp"
                    android:background="@drawable/btn_control_forme"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Sexe"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spSexe"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/btn_control_forme"
                    android:entries="@array/list_sexe" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Niveau d'étude"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spEtude"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/btn_control_forme"
                    android:entries="@array/list_niveau_etude" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Age"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spAge"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/btn_control_forme"
                    android:entries="@array/list_ages" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="7dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Organisation d'appartenance"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="Organisation Paysanne"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/txNom_op"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/btn_control_forme"
                    android:paddingLeft="7dp"
                    android:hint="@string/lbl_organisation_paysanne"
                    android:inputType="text"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Cooperative"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/txNom_cooperative"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/btn_control_forme"
                    android:paddingLeft="7dp"
                    android:inputType="text"
                    android:hint="@string/lbl_cooperative" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingRight="30dp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="15sp"
                android:text="Suivant"
                android:gravity="center"/>
            <Button
                android:id="@+id/btnRet"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="15sp"
                android:text="retour"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="15sp"
            android:text="@string/copyrith"
            android:gravity="center"
            android:textColor="#000"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>